# asset-builder

./: .gitignore  CMakeLists.txt  README.md
AssetBuilder/: CMakeLists.txt
AssetBuilder/include/: Application.h  Localization.h
AssetBuilder/res/strings/: en.json
AssetBuilder/src/: Application.cpp  Localization.cpp  Main.cpp
AssetBuilder/src/Utils/: Log.cpp
Common/: CMakeLists.txt
Game/: CMakeLists.txt
Game/include/: Game.h  Localization.h
Game/res/strings/: en.locbin
Game/src/: Game.cpp  Localization.cpp  Main.cpp
cmake/: ProjectConfig.cmake  dependencies.cmake
